`Update frontend/index.html with SEO metadata and structured data`

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,126 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Legtech</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+
+    <!-- Primary SEO -->
+    <title>Legtech — Digital Services for Retailers | LEGTECH MULTI PRODUCTS PRIVATE LIMITED</title>
+    <meta
+      name="description"
+      content="Legtech empowers retailers with commission-based digital services: PAN (individual & business), Driving Licence (LL, DL, renewals, address/name corrections), GST & tax services, mobile/DTH recharge, electricity & gas bill payments—secure software, training, and support."
+    />
+    <meta
+      name="keywords"
+      content="Legtech, LEGTECH MULTI PRODUCTS PRIVATE LIMITED, retailer services, PAN card, business PAN, driving licence, learner licence, DL renewal, address change, name correction, GST registration, tax services, mobile recharge, DTH recharge, electricity bill payment, gas bill payment, BBPS"
+    />
+    <link rel="canonical" href="https://www.legtech.in/" />
+
+    <!-- Brand -->
+    <meta name="application-name" content="Legtech" />
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="msapplication-TileColor" content="#0f172a" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index,follow,max-image-preview:large" />
+    <meta name="googlebot" content="index,follow" />
+
+    <!-- Favicon & App Icons -->
+    <link rel="icon" type="image/ico" href="/icons/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+    <!-- <link rel="manifest" href="/site.webmanifest" /> -->
+
+    <!-- Preconnect (fonts or APIs if you add them later) -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Legtech" />
+    <meta property="og:title" content="Legtech — Digital Services for Retailers" />
+    <meta
+      property="og:description"
+      content="Commission-based e-services for retailers: PAN, Driving Licence, GST & tax, mobile/DTH recharge, electricity & gas bill payments—plus robust software and support."
+    />
+    <meta property="og:url" content="https://www.legtech.in/" />
+    <meta property="og:image" content="https://www.legtech.in/og-image.jpg" />
+    <meta property="og:image:alt" content="Legtech retailer digital services" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Legtech — Digital Services for Retailers" />
+    <meta
+      name="twitter:description"
+      content="Retailer platform for PAN, DL, GST & tax services, recharges, and utility bill payments—earn commissions with Legtech."
+    />
+    <meta name="twitter:image" content="https://www.legtech.in/og-image.jpg" />
+
+    <!-- Regional/Hreflang (adjust as you add languages) -->
+    <link rel="alternate" href="https://www.legtech.in/" hreflang="en-IN" />
+    <link rel="alternate" href="https://www.legtech.in/" hreflang="x-default" />
+
+    <!-- Structured Data: Organization + Services -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "LEGTECH MULTI PRODUCTS PRIVATE LIMITED",
+        "alternateName": "Legtech",
+        "url": "https://www.legtech.in/",
+        "logo": "https://www.legtech.in/logo.png",
+        "sameAs": [],
+        "contactPoint": [{
+          "@type": "ContactPoint",
+          "contactType": "customer support",
+          "availableLanguage": ["en", "hi", "bn"],
+          "email": "support@legtech.in"
+        }],
+        "makesOffer": {
+          "@type": "OfferCatalog",
+          "name": "Retailer Digital Services",
+          "itemListElement": [
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "PAN Services",
+                "description": "New/Correction PAN for individuals and businesses."
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Driving Licence Services",
+                "description": "LL/DL apply, renewals, address & name corrections, all vehicle classes."
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "GST & Tax Services",
+                "description": "GST registration and tax-related facilitation."
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Recharge & Bill Payments",
+                "description": "Mobile/DTH recharge, electricity & gas bill payments with commissions."
+              }
+            }
+          ]
+        }
+      }
+    </script>
+
+    <!-- Prevent iOS auto-detecting numbers as phone numbers if unwanted -->
+    <meta name="format-detection" content="telephone=no,email=no,address=no" />
   </head>
   <body>
     <div id="root"></div>
